tests/baselines/reference/classWithDuplicateIdentifier.errors.txt
tests/cases/compiler/classWithDuplicateIdentifier.ts(3,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/classWithDuplicateIdentifier.ts(3,5): error TS2717: Subsequent property declarations must have the same type.  Property 'a' must be of type '() => number', but here has type 'number'.
tests/cases/compiler/classWithDuplicateIdentifier.ts(6,5): error TS2300: Duplicate identifier 'b'.
tests/cases/compiler/classWithDuplicateIdentifier.ts(7,5): error TS2300: Duplicate identifier 'b'.
tests/cases/compiler/classWithDuplicateIdentifier.ts(11,5): error TS2300: Duplicate identifier 'c'.
tests/cases/compiler/classWithDuplicateIdentifier.ts(11,5): error TS2717: Subsequent property declarations must have the same type.  Property 'c' must be of type 'number', but here has type 'string'.


==== tests/cases/compiler/classWithDuplicateIdentifier.ts (6 errors) ====
    class C {
        a(): number { return 0; } // error: duplicate identifier
        a: number;
        ~
!!! error TS2300: Duplicate identifier 'a'.
        ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'a' must be of type '() => number', but here has type 'number'.
!!! related TS6203 tests/cases/compiler/classWithDuplicateIdentifier.ts:2:5: 'a' was also declared here.
    }
    class K {
        b: number; // error: duplicate identifier
        ~
!!! error TS2300: Duplicate identifier 'b'.
        b(): number { return 0; }
        ~
!!! error TS2300: Duplicate identifier 'b'.
    }
    class D {
        c: number;
        c: string;
        ~
!!! error TS2300: Duplicate identifier 'c'.
        ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'c' must be of type 'number', but here has type 'string'.
!!! related TS6203 tests/cases/compiler/classWithDuplicateIdentifier.ts:10:5: 'c' was also declared here.
    }
    